--- a/src/main/resources/templates/syw/inquiry.html
+++ b/src/main/resources/templates/syw/inquiry.html
@@ -11,8 +11,10 @@
 
 		select {
 			width: 100%;
-			padding: 5px;
-			margin-top: 5px;
+			padding: 10px 5px;
+			margin: 10px 0px;
+			border-radius: 5px;
+
 		}
 
 		textarea {
@@ -37,12 +39,19 @@
 			margin-bottom: 5px;
 		}
 
-		#inquiry-title-input,
-		#message {
+		#inquiry-title-input {
 			width: 100%;
-			padding: 5px;
+			padding: 10px;
 			margin-top: 5px;
 			box-sizing: border-box;
+			border-radius: 5px;
+		}
+		#message{
+			width: 100%;
+			padding: 15px;
+			margin-top: 5px;
+			box-sizing: border-box;
+			border-radius: 5px;
 		}
 
 		#new-inquiry-form,
@@ -58,7 +67,7 @@
 
 		#new-inquiry-form {
 			margin-left: -40px;
-			margin-top: 70px;
+			margin-top: 40px;
 		}
 
 		#container {
