--- a/src/main/resources/templates/syw/inquiryModify.html
+++ b/src/main/resources/templates/syw/inquiryModify.html
@@ -11,8 +11,10 @@
 
 		select {
 			width: 100%;
-			padding: 5px;
-			margin-top: 5px;
+			padding: 10px 5px;
+			margin: 10px 0px;
+			border-radius: 5px;
+
 		}
 
 		textarea {
@@ -21,24 +23,35 @@
 			margin-top: 10px;
 		}
 
-		button {
-			margin-top: 10px;
-			padding: 5px 10px;
+		input[type="submit"] {
+			background-color: #e40000d3;
+			color: white;
+			border: none;
+			padding: 10px 20px;
+			cursor: pointer;
+			display: block;
+    		margin: 0 auto;
 		}
-
+		
 
 		.inquiry-title {
 			font-weight: bold;
 			margin-bottom: 5px;
 		}
 
-		/* 추가된 CSS 스타일 */
-		#inquiry-title-input,
-		#message {
+		#inquiry-title-input {
 			width: 100%;
-			padding: 5px;
+			padding: 10px;
 			margin-top: 5px;
 			box-sizing: border-box;
+			border-radius: 5px;
+		}
+		#message{
+			width: 100%;
+			padding: 15px;
+			margin-top: 5px;
+			box-sizing: border-box;
+			border-radius: 5px;
 		}
 
 		#new-inquiry-form,
@@ -49,26 +62,28 @@
 
 
 		#mypage_sidebar_nav {
-			margin-left: -100px;
+			margin-left: -250px;
 		}
 
 		#new-inquiry-form {
-			margin-left: -10px;
-			margin-top: 70px;
+			margin-left: -40px;
+			margin-top: 40px;
 		}
 
 		#container {
 			margin-left: -80px;
 		}
-		
-		input[type="submit"] {
-			background-color: #e40000d3;
-			color: white;
-			border: none;
-			padding: 10px 20px;
-			cursor: pointer;
-			display: block;
-    		margin: 0 auto;
+
+		.mypage_sidebar a {
+			color: black;
+		}
+
+		#mypage_sidebar_nav {
+			margin-left: -100px;
+		}
+
+		#message {
+			box-sizing: border-box;
 		}
 	</style>
 </head>
