--- a/src/main/resources/templates/syw/noticeList.html
+++ b/src/main/resources/templates/syw/noticeList.html
@@ -88,7 +88,7 @@
 			<div th:each="notice : ${page}" class="notice-item">
 				<h3 th:text="${notice.title}"></h3>
 				<p class="date" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></p>
-				<pre class="notice-content" th:text="${notice.content}" style="background-color: rgb(243, 243, 243); padding: 20px;"></pre>
+				<p class="notice-content" th:text="${notice.content}" style="background-color: rgb(243, 243, 243); padding: 20px; white-space: pre-line;"></p>
 			</div>
 
 			<div class="pagination">
