객실 이름입니다 수정

--- a/src/main/resources/templates/pyr/modifyRoom.html
+++ b/src/main/resources/templates/pyr/modifyRoom.html
@@ -78,7 +78,7 @@
 					</p>
 
 					<div class="prName">
-						<p>객실 이름</p>
+						<p>객실 이름 입니다</p>
 						<input type="text" class="edit_type"
 							th:value="${product.product_type}">
 					</div>
