--- a/src/main/resources/templates/pyr/modifyRoom.html
+++ b/src/main/resources/templates/pyr/modifyRoom.html
@@ -21,7 +21,7 @@
 
 		<div id="productListContainer">
 			<div id="title">
-				<h1>상품 수정</h1>
+				<h1>상품 수정임</h1>
 			</div>
 			<div id="productContainer" class="box">
 				<div class="boxCintainer">
@@ -78,7 +78,7 @@
 					</p>
 
 					<div class="prName">
-						<p>객실 이름 입니다</p>
+						<p>객실 이름</p>
 						<input type="text" class="edit_type"
 							th:value="${product.product_type}">
 					</div>
