--- a/src/main/resources/templates/pyr/modifyRoom.html
+++ b/src/main/resources/templates/pyr/modifyRoom.html
@@ -22,7 +22,7 @@
 		<div id="productListContainer">
 			<div id="title">
 
-				<h1>상품 수정 인데</h1>
+				<h1>상품 수정 입니다</h1>
 
 			</div>
 			<div id="productContainer" class="box">
