--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -2,356 +2,261 @@
 <html>
 
 <head>
-	<title>Inquiry List</title>
-	<style>
-		.content-container {
-			width: 900px;
-			margin-left: -200px;
-			margin-top: 40px;
-		}
+   <title>Inquiry List</title>
+   <style>
+      .content-container {
+         width: 900px;
+         margin-left: -200px;
+         margin-top: 40px;
+      }
 
-		.inquiry-item {
-			position: relative;
-			border-bottom: 1px solid #ccc;
-			margin-top: 20px;
-			cursor: pointer;
-<<<<<<< HEAD
-			padding-bottom: 20px;
-=======
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-		}
+      .inquiry-item {
+         position: relative;
+         border-bottom: 1px solid #ccc;
+         margin-top: 20px;
+         cursor: pointer;
+      }
 
 
-		.inquiry-content,
-		.answer-content {
-			display: none;
-		}
+      .inquiry-content,
+      .answer-content {
+         display: none;
+      }
 
-		.inquiry_date {
-			font-weight: normal;
-			color: rgb(193, 193, 193);
-		}
+      .inquiry_date {
+         font-weight: normal;
+         color: rgb(193, 193, 193);
+      }
 
-		.date {
-			font-weight: normal;
-		}
+      .date {
+         font-weight: normal;
+      }
 
-		.answer {
-			margin-left: 20px;
-		}
+      .answer {
+         margin-left: 20px;
+      }
 
-		.title {
-			font-weight: normal;
-		}
+      .title {
+         font-weight: normal;
+      }
 
-		.answer-content {
-			margin-left: 50px;
-			padding-bottom: 30px;
-		}
-<<<<<<< HEAD
-		
-		
-=======
+      .answer-content {
+         margin-left: 50px;
+         padding-bottom: 30px;
+      }
 
 
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
 
-		.inquiry-content {
-			margin-left: 10px;
-			margin-top: 10px;
-<<<<<<< HEAD
-=======
-			margin-bottom: 10px;
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-			overflow: auto;
-		}
+      .inquiry-content {
+         margin-left: 10px;
+         margin-top: 10px;
+         margin-bottom: 10px;
+         overflow: auto;
+      }
 
-		.inquiry-content p {
-			margin-top: 0;
-			margin-bottom: 0;
-		}
+      .inquiry-content p {
+         margin-top: 0;
+         margin-bottom: 0;
+      }
 
-		.answer-prefix {
-			display: inline-block;
-			width: 50px;
-			text-align: right;
-		}
+      .answer-prefix {
+         display: inline-block;
+         width: 50px;
+         text-align: right;
+      }
 
-		.content-container {
-			margin-left: -50px;
-		}
+      .content-container {
+         margin-left: -50px;
+      }
 
-		.button-container {
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			display: none;
-			margin-top: 10px;
-		}
+      .button-container {
+         position: absolute;
+         right: 0;
+         bottom: 0;
+         display: none;
+         margin-top: 10px;
+      }
 
-		.edit-button {
-<<<<<<< HEAD
-			background-color: lightblue;
-			color: white;
-			border-radius: 5px;
-=======
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-			padding: 1px 5px;
-			cursor: pointer;
-		}
+      .edit-button {
+         padding: 1px 5px;
+         cursor: pointer;
+      }
 
-		.delete-button {
-<<<<<<< HEAD
-			background-color: #e40000d3;
-			color: white;
-			border-radius: 5px;
-=======
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-			padding: 1px 5px;
-			cursor: pointer;
-		}
+      .delete-button {
+         padding: 1px 5px;
+         cursor: pointer;
+      }
 
-		.answer-content h4 {
-			display: inline-block;
-			margin-bottom: 0;
-			margin-left: -50px;
-		}
+      .answer-content h4 {
+         display: inline-block;
+         margin-bottom: 0;
+         margin-left: -50px;
+      }
 
-		.inquiry-item .type {
-			font-weight: bold;
-		}
+      .inquiry-item .type {
+         font-weight: bold;
+      }
 
-		.inquiry-heading {
-			color: #e40000d3;
-		}
+      .inquiry-heading {
+         color: #e40000d3;
+      }
 
-		.inquiry_pre .title,
-		.inquiry_pre .answer {
-			font-weight: normal;
-		}
+      .inquiry_pre .title,
+      .inquiry_pre .answer {
+         font-weight: normal;
+      }
 
-		.inquiryMessage {
-			padding: 20px;
-		}
-<<<<<<< HEAD
-=======
+      .inquiryMessage {
+         padding: 20px;
+         border-radius: 7px;
+      }
 
-		.center-content3 {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			margin-top: -250px;
-			margin-left: 300px;
-			height: 100vh;
-		}
+      .center-content3 {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         margin-top: -250px;
+         margin-left: 300px;
+         height: 100vh;
+      }
 
 
-		.btn_red {
-			display: inline-block;
-			padding: 10px 20px;
-			border: none;
-			border-radius: 4px;
-			background-color: #ff0000;
-			color: #fff;
-			text-decoration: none;
-			font-size: 16px;
-			font-weight: bold;
+      .btn_red {
+         display: inline-block;
+         padding: 10px 20px;
+         border: none;
+         border-radius: 4px;
+         background-color: #ff0000;
+         color: #fff;
+         text-decoration: none;
+         font-size: 16px;
+         font-weight: bold;
 
-		}
+      }
 
-		.btn_red:hover {
-			background-color: #cc0000;
-		}
+      .btn_red:hover {
+         background-color: #cc0000;
+      }
 
-		.btn-toggle {
-			background: none;
-			border: none;
-			cursor: pointer;
-			font-size: 1.5rem;
-		}
+      .btn-toggle {
+         background: none;
+         border: none;
+         cursor: pointer;
+         font-size: 1.5rem;
+      }
 
-		.button-container {
-		display: none;
-		background-color: white;
-		border: 1px solid #ccc;
-		padding: 3px;
-		margin-bottom: 17px;
-		margin-right: 20px;
-	}
+      .button-container {
+      display: none;
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 3px;
+      margin-bottom: 17px;
+      margin-right: 20px;
+   }
 
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-	</style>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script>
-		$(document).ready(function () {
-<<<<<<< HEAD
-			$(".inquiry-item").click(function () {
-				var content = $(this).find(".inquiry-content, .answer-content, .button-container");
-				var image = $(this).find(".toggle-image");
+   </style>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script>
+      $(document).ready(function () {
+   $(".inquiry-item").click(function (event) {
+      if (!$(event.target).hasClass("content-toggle")) {
+         var content = $(this).find(".inquiry-content, .answer-content");
+         var image = $(this).find(".toggle-image");
 
-				content.slideToggle(function () {
+         content.slideToggle(function () {
 
-					if (content.is(":visible")) {
-						image.attr("src", "/img/key/up.png");
-					} else {
-						image.attr("src", "/img/key/down.png");
-					}
-				});
-			});
-		});
-		$(document).ready(function () {
-=======
-	$(".inquiry-item").click(function (event) {
-		if (!$(event.target).hasClass("content-toggle")) {
-			var content = $(this).find(".inquiry-content, .answer-content");
-			var image = $(this).find(".toggle-image");
+            if (content.is(":visible")) {
+               image.attr("src", "/img/key/up.png");
+            } else {
+               image.attr("src", "/img/key/down.png");
+            }
+         });
+      }
+   });
+   
+   
 
-			content.slideToggle(function () {
+   $(".content-toggle").click(function (event) {
+            event.stopPropagation();
+            $(this).closest(".inquiry-item").find(".button-container").toggle();
+         });
 
-				if (content.is(":visible")) {
-					image.attr("src", "/img/key/up.png");
-				} else {
-					image.attr("src", "/img/key/down.png");
-				}
-			});
-		}
-	});
-	
-	
-
-	$(".content-toggle").click(function (event) {
-				event.stopPropagation();
-				$(this).closest(".inquiry-item").find(".button-container").toggle();
-			});
-
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-			$(".delete-button").click(function (event) {
-				event.preventDefault();
-				var confirmation = confirm('정말 삭제하시겠습니까?');
-				if (confirmation) {
-					window.location.href = $(this).attr('href');
-				}
-			});
-		});
-	</script>
+         $(".delete-button").click(function (event) {
+            event.preventDefault();
+            var confirmation = confirm('정말 삭제하시겠습니까?');
+            if (confirmation) {
+               window.location.href = $(this).attr('href');
+            }
+         });
+      });
+   </script>
 </head>
 
 <body>
-	<html layout:decorate="~{jjj/header}">
-	<div id="my_infomation_modify" layout:fragment="content" class="container my-3">
-		<nav id="mypage_sidebar_nav">
-			<ul>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의
-						정보</a></li>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약 내역</a></li>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_inquiry}" class="active">문의 내역</a></li>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_productList}"
-						sec:authorize="hasRole('ROLE_PARTNER')">내 상품 목록</a></li>
-			</ul>
-		</nav>
-		<div class="content-container" th:if="${inquiries.size()>0}">
-			<h2 class="inquiry-heading">나의 문의 내역</h2>
-			<div th:each="inquiry : ${inquiries}" class="inquiry-item" data-inquiry-id="${inquiry.id}">
-				<h3 class="inquiry_pre">
-					<span class="type" th:text="${inquiry.type}"></span> <span
-						th:if="${inquiry.inquiryAnswer.size() > 0}" class="answer">답변
-						완료</span>
-				</h3>
-				<div style="display: flex; justify-content: space-between; align-items: center;">
-					<span class="title" th:text="${inquiry.title}" style="font-size: 18px;"></span>
-					<img class="toggle-image" src="/img/key/down.png" style="width: 20px; height: 20px;">
-				</div>
-				<div>
-					<h4 class="inquiry_date">
-						작성일 <span class="date"
-							th:text="${#temporals.format(inquiry.createDate, 'yyyy-MM-dd HH:mm')}"></span>
-					</h4>
-				</div>
-				<div class="inquiry-content">
-<<<<<<< HEAD
-					<h4 style="margin-left: 5px;">문의</h4>
-					<pre class="inquiryMessage" th:utext="${inquiry.message}" style="background-color: #f2f2f2;"></pre>
-=======
-					<div
-						style="display: flex; justify-content: space-between; align-items: center; position: relative;">
-						<h4 style="margin-left: 5px;">문의</h4>
-						<div class="button-container">
-							<a th:href="@{/inquiry/modify/{id}(id=${inquiry.id})}" class="edit-button">수정</a>
-							<a th:href="@{/inquiry/delete/{id}(id=${inquiry.id})}" class="delete-button">삭제</a>
-						</div>
-						<button class="btn-toggle content-toggle" th:if="${inquiry.inquiryAnswer.size() == 0}">&#x205D;</button>
-					</div>
-					<p class="inquiryMessage" th:utext="${inquiry.message}"
-						style="background-color: #f2f2f2; white-space: pre-line;"></p>
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-				</div>
-				<div th:each="answer : ${inquiry.inquiryAnswer}" class="answer-content">
-					<h4>
-						<span class="answer-prefix">└></span>답변 <span class="date"
-							style="font-size: 13px; color: rgb(193, 193, 193);">작성일 <span
-								th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span></span>
-					</h4>
-<<<<<<< HEAD
-					<pre th:utext="${@commonUtil.markdown(answer.message)}" style="background-color: #f2f2f2; padding: 20px;"></pre>
-				</div>
-				<div th:if="${inquiry.inquiryAnswer.size() == 0}" class="button-container">
-					<a th:href="@{/inquiry/modify/{id}(id=${inquiry.id})}" class="edit-button" style="margin-top: 10px;">수정</a> <a
-						th:href="@{/inquiry/delete/{id}(id=${inquiry.id})}" class="delete-button">삭제</a>
-				</div>
-=======
-					<p th:text="${answer.message}"
-						style="background-color: #f2f2f2; padding: 20px; white-space: pre-line;"></p>
-				</div>
+   <html layout:decorate="~{jjj/header}">
+   <div id="my_infomation_modify" layout:fragment="content" class="container my-3">
+      <nav id="mypage_sidebar_nav">
+         <ul>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의정보</a></li>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약 내역</a></li>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_inquiry}" class="active">문의 내역</a></li>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_productList}"
+                  sec:authorize="hasRole('ROLE_PARTNER')">내 상품 목록</a></li>
+         </ul>
+      </nav>
+      <div class="content-container" th:if="${inquiries.size()>0}">
+         <h2 class="inquiry-heading">나의 문의 내역</h2>
+         <div th:each="inquiry : ${inquiries}" class="inquiry-item" data-inquiry-id="${inquiry.id}">
+            <h3 class="inquiry_pre">
+               <span class="type" th:text="${inquiry.type}"></span> <span
+                  th:if="${inquiry.inquiryAnswer.size() > 0}" class="answer">답변
+                  완료</span>
+            </h3>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+               <span class="title" th:text="${inquiry.title}" style="font-size: 18px;"></span>
+               <img class="toggle-image" src="/img/key/down.png" style="width: 20px; height: 20px;">
+            </div>
+            <div>
+               <h4 class="inquiry_date">
+                  작성일 <span class="date"
+                     th:text="${#temporals.format(inquiry.createDate, 'yyyy-MM-dd HH:mm')}"></span>
+               </h4>
+            </div>
+            <div class="inquiry-content">
+               <div
+                  style="display: flex; justify-content: space-between; align-items: center; position: relative;">
+                  <h4 style="margin-left: 5px;">문의</h4>
+                  <div class="button-container">
+                     <a th:href="@{/inquiry/modify/{id}(id=${inquiry.id})}" class="edit-button">수정</a>
+                     <a th:href="@{/inquiry/delete/{id}(id=${inquiry.id})}" class="delete-button">삭제</a>
+                  </div>
+                  <button class="btn-toggle content-toggle" th:if="${inquiry.inquiryAnswer.size() == 0}">&#x205D;</button>
+               </div>
+               <p class="inquiryMessage" th:utext="${inquiry.message}"
+                  style="background-color: #f2f2f2; white-space: pre-line;"></p>
+            </div>
+            <div th:each="answer : ${inquiry.inquiryAnswer}" class="answer-content">
+               <h4>
+                  <span class="answer-prefix">└></span>답변 <span class="date"
+                     style="font-size: 13px; color: rgb(193, 193, 193);">작성일 <span
+                        th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span></span>
+               </h4>
+               <p th:text="${answer.message}"
+                  style="background-color: #f2f2f2; padding: 20px; white-space: pre-line; border-radius: 7px;" ></p>
+            </div>
 
-<<<<<<< HEAD
->>>>>>> fcb65018d4ff7952c27607c6b4db6d25cbfff0e0
-=======
->>>>>>> 1c87b93d6556601830f760dbe686bcfbeb2a2783
->>>>>>> 4d408017f7bdd5364e7992b891bdeef09370be72
-			</div>
-		</div>
-		<div th:if="${inquiries.size() < 1}" class="center-content3">
-			<h1>문의 내역이 없습니다.</h1>
-			<span id="go_inquiries" style="color: grey;">궁금하신 점은 언제든 문의주세요</span></span>
-			<a th:href="@{/more/inquiry}" class="btn_red">문의하기</a>
-		</div>
+         </div>
+      </div>
+      <div th:if="${inquiries.size() < 1}" class="center-content3">
+         <h1>문의 내역이 없습니다.</h1>
+         <span id="go_inquiries" style="color: grey;">궁금하신 점은 언제든 문의주세요</span></span>
+         <a th:href="@{/more/inquiry}" class="btn_red">문의하기</a>
+      </div>
 
-	</div>
+   </div>
 </body>
 
 </html>
