--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -108,6 +108,7 @@
 
 		.inquiryMessage {
 			padding: 20px;
+			border-radius: 7px;
 		}
 
 		.center-content3 {
@@ -197,8 +198,7 @@
 	<div id="my_infomation_modify" layout:fragment="content" class="container my-3">
 		<nav id="mypage_sidebar_nav">
 			<ul>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의
-						정보</a></li>
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의정보</a></li>
 				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약 내역</a></li>
 				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_inquiry}" class="active">문의 내역</a></li>
 				<li class="mypage_sidebar"><a th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
@@ -245,7 +245,7 @@
 								th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span></span>
 					</h4>
 					<p th:text="${answer.message}"
-						style="background-color: #f2f2f2; padding: 20px; white-space: pre-line;"></p>
+						style="background-color: #f2f2f2; padding: 20px; white-space: pre-line; border-radius: 7px;" ></p>
 				</div>
 
 			</div>
