--- a/src/main/resources/templates/syw/inquiry_answer.html
+++ b/src/main/resources/templates/syw/inquiry_answer.html
@@ -34,7 +34,6 @@
 		.content-container {
 			margin: 0 auto;
 			max-width: 800px;
-			padding-top: 60px;
 		}
 
 		.inquiry_list {
@@ -56,8 +55,9 @@
 
 		.answer_form textarea {
 			width: 790px;
-			height: 200px;
+			height: 300px;
 			padding: 5px;
+			border-radius: 5px;
 		}
 
 		.answer_form input[type="submit"] {
@@ -72,10 +72,12 @@
         
         .inquiry-container {
             background-color: rgb(233, 233, 233);
+            border-radius: 7px;
         }
         
         .answer-container {
             background-color: rgb(233, 233, 233);
+            border-radius: 7px;
         }
 	</style>
 
