--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -135,7 +135,20 @@
   /* Add any other styles for the grayed-out appearance */
 }
 
-
+#cancelBtn.cancelBtn3 {
+    background-color: blue;
+    width: 50%;
+	height: 36px;
+	border: none;
+	font-size: 15px;
+	line-height: 36px;
+	color: #fff;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 4px 4px 4px 4px;
+	margin-top: 18px;
+	font-weight: bold;
+}
 </style>
 </head>
 
@@ -201,8 +214,8 @@
 					th:class="${book.bookStatus == '이용중' or book.bookStatus == 'CANCEL_PAYMENT' or book.bookStatus == '이용완료' ? 'gray-button' : 'cancelBtn'}"
 					th:text="${book.bookStatus == '이용중' or book.bookStatus == 'CANCEL_PAYMENT' or book.bookStatus == '이용완료' ? '만료' : '예약취소'}">예약취소</button> -->
 					<button id="cancelBtn" class="cancelBtn"
-        th:class="${book.bookStatus == '이용중' or book.bookStatus == 'CANCEL_PAYMENT' or book.bookStatus == '이용완료' ? 'gray-button' : 'cancelBtn'}"
-        th:text="${book.bookStatus == '이용중' ? '이용중' : book.bookStatus == '이용완료' ? '이용완료' : '예약취소'}">예약취소</button>
+    th:class="${book.bookStatus == '이용중' ? 'cancelBtn3' : (book.bookStatus == 'CANCEL_PAYMENT' or book.bookStatus == '이용완료' ? 'gray-button' : 'cancelBtn')}"
+    th:text="${book.bookStatus == '이용중' ? '이용중' : book.bookStatus == '이용완료' ? '이용완료' : '예약취소'}">예약취소</button>
 					
 			 <button id="cancelBtn2" class="reviewBtn"
                     th:if="${book.bookStatus == '이용완료'}" 
