--- a/src/main/resources/templates/pyr/productNewMainReg.html
+++ b/src/main/resources/templates/pyr/productNewMainReg.html
@@ -92,7 +92,7 @@
 						</div>
 						<div id="fileArea">
 							<label id="roomPhotos">
-								<h3>객실 사진</h3> <input type="file" name="acc_img"
+								<h3>업소 사진</h3> <input type="file" name="acc_img"
 								id="addMainPhoto">
 							</label>
 						</div>
@@ -101,8 +101,8 @@
 					<label id="mainPrCom">
 						<hr>
 						<h3>사장님 한마디</h3> <textarea type="text"
-							placeholder="숙소에 대한 설명을 등록해 주세요" minlength="10" maxlength="150"
-							required name="acc_explain" id="acc_explain"></textarea>
+							placeholder="업소에 대한 간략한 설명을 등록해 주세요" minlength="10"
+							maxlength="150" required name="acc_explain" id="acc_explain"></textarea>
 					</label>
 				</div>
 
@@ -110,7 +110,7 @@
 				<div id="accInfoArea" style="display: none;">
 					<h3>숙소 정보</h3>
 					<textarea rows="" cols="" type="text" name="acc_info"
-						placeholder="숙소에 대한 상세설명을 등록해 주세요. ex)공지사항, 기본정보, 취소 및 환불규정...">.</textarea>
+						placeholder="숙소에 대한 상세설명을 작성해 주세요. ex)공지사항, 기본정보, 취소 및 환불규정...">.</textarea>
 				</div>
 
 
