--- a/src/main/resources/static/css/pyr_add_product.css
+++ b/src/main/resources/static/css/pyr_add_product.css
@@ -150,11 +150,11 @@ a {
 	transition: background-color 0.3s ease;
 }
 
-#Product-registration button[type="reset"] {
+#Product-registration  #addProductReset {
 	background-color: #c3b3b3d3;
 }
 
-#Product-registration button[type="reset"]:hover {
+#Product-registration  #addProductReset:hover {
 	background-color: #958888d3;
 }
 
