--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -7,7 +7,7 @@
 	display: flex;
 	padding: 15px;
 	background: #fff;
-	border: 1px solid rgba(0, 0, 0, 0.08);
+	border: 1px solid grey;
 	border-radius: 4px;
 	box-sizing: border-box;
 	margin-bottom: 15px;
