--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -228,7 +228,7 @@
             <div class="inquiry-content">
                <div
                   style="display: flex; justify-content: space-between; align-items: center; position: relative;">
-                  <h4 style="margin-left: 5px;">문의</h4>
+                  <h4 style="margin-left: 5px;">문의 내용</h4>
                   <div class="button-container">
                      <a th:href="@{/inquiry/modify/{id}(id=${inquiry.id})}" class="edit-button">수정</a>
                      <a th:href="@{/inquiry/delete/{id}(id=${inquiry.id})}" class="delete-button">삭제</a>
@@ -240,12 +240,13 @@
             </div>
             <div th:each="answer : ${inquiry.inquiryAnswer}" class="answer-content">
                <h4>
-                  <span class="answer-prefix">└></span>답변 <span class="date"
-                     style="font-size: 13px; color: rgb(193, 193, 193);">작성일 <span
-                        th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span></span>
+                  <span class="answer-prefix">└></span> 답변 </span>
                </h4>
                <p th:text="${answer.message}"
                   style="background-color: #f2f2f2; padding: 20px; white-space: pre-line; border-radius: 7px;" ></p>
+                  <span class="date"
+                     style="font-size: 13px; color: rgb(193, 193, 193);">  <span
+                        th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span>
             </div>
 
          </div>
