신고기능 수정

--- a/src/main/resources/templates/pyr/product_detail.html
+++ b/src/main/resources/templates/pyr/product_detail.html
@@ -22,8 +22,7 @@
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <!-- 다음 주소 검색 api-->
 <script th:src="@{/js/product_detail.js}"></script>
-<link rel="stylesheet" href="css/kty_review.css">
-
+<link rel="stylesheet" href="/css/dec_kty.css">
 <!-- 김도겸 css -->
 <link rel="stylesheet" href="/css/product_detail_kdg.css">
 <!-- 김도겸 css 끝 -->
