--- a/src/main/resources/static/css/dec_kty.css
+++ b/src/main/resources/static/css/dec_kty.css
@@ -14,6 +14,8 @@ li {
 }
 
      .declaration {
+     
+     		margin-top:-50px;
             border: none;
             background-color: black;
             color: white;
