--- a/src/main/resources/templates/khk/partnerListPage.html
+++ b/src/main/resources/templates/khk/partnerListPage.html
@@ -2,8 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-
-
+<style>
+	.input-group {
+		position: absolute;
+		top: 89px;
+		margin-right: -65px;
+	}
+	#searchResults {
+		margin-top: 30px;
+	}
+	
+</style>
 
 
 
