--- a/src/main/resources/templates/kty/mypage.html
+++ b/src/main/resources/templates/kty/mypage.html
@@ -202,7 +202,7 @@
 
 	<!-- 사이드 바 -->
 	<nav id="mypage_sidebar_nav">
-		<ul>
+		<ul class="mypage_sidebar_nav_menu">
 			<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}"
 				class="active">나의 정보</a></li>
 			<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약
