--- a/src/main/resources/templates/syw/notice_modify.html
+++ b/src/main/resources/templates/syw/notice_modify.html
@@ -1,221 +1,228 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
-<meta charset="utf-8">
-<style>
-.hide {
-	display: none;
-}
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+	<meta charset="utf-8">
+	<style>
+		.hide {
+			display: none;
+		}
 
-body {
-	font-family: Arial, sans-serif;
-	background-color: #fff;
-	color: #333;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #fff;
+			color: #333;
+			box-sizing: border-box;
+			margin: 0;
+			padding: 0;
+		}
 
-h1 {
-	text-align: center;
-	margin: 20px 0;
-}
+		h1 {
+			text-align: center;
+			margin: 20px 0;
+		}
 
-h3 {
-	font-size: 1.17em;
-	margin-block-start: 1em;
-	margin-block-end: 1em;
-	margin-inline-start: 10px;
-	margin-inline-end: 0px;
-	font-weight: bold;
-}
+		h3 {
+			font-size: 1.17em;
+			margin-block-start: 1em;
+			margin-block-end: 1em;
+			margin-inline-start: 10px;
+			margin-inline-end: 0px;
+			font-weight: bold;
+		}
 
-.container {
-	margin: 10px auto;
-	width: 90%;
-	height: 100%;
-	padding-left: 80px;
-}
+		.container {
+			margin: 10px auto;
+			width: 90%;
+			height: 100%;
+			padding-left: 80px;
+		}
 
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
+		table {
+			width: 100%;
+			border-collapse: collapse;
+		}
 
-th, td {
-	padding: 8px;
-	text-align: left;
-	border-bottom: 1px solid #ddd;
-}
+		th,
+		td {
+			padding: 8px;
+			text-align: left;
+			border-bottom: 1px solid #ddd;
+		}
 
-th {
-	color: #333;
-}
+		th {
+			color: #333;
+		}
 
-tr:nth-child(even) {
-	
-}
+		tr:nth-child(even) {}
 
-form {
-	display: inline-block;
-}
+		form {
+			display: inline-block;
+		}
 
-input[type="submit"] {
-	background-color: rgb(255, 128, 128);
-	color: white;
-	border: none;
-	padding: 5px 10px;
-	cursor: pointer;
-}
+		input[type="submit"] {
+			background-color: rgb(255, 128, 128);
+			color: white;
+			border: none;
+			padding: 5px 10px;
+			cursor: pointer;
+		}
 
-input[type="submit"]:hover {
-	background-color: rgb(255, 128, 128);
-}
+		input[type="submit"]:hover {
+			background-color: rgb(255, 128, 128);
+		}
 
-.input-group {
-	right: 100px;
-	position: absolute;
-}
+		.input-group {
+			right: 100px;
+			position: absolute;
+		}
 
-#btn_search {
-	background-color: rgb(255, 128, 128);
-	color: #fff;
-	border-style: none;
-}
+		#btn_search {
+			background-color: rgb(255, 128, 128);
+			color: #fff;
+			border-style: none;
+		}
 
-span.role-USER {
-	color: black;
-}
+		span.role-USER {
+			color: black;
+		}
 
-span.role-PARTNER {
-	color: blue;
-}
+		span.role-PARTNER {
+			color: blue;
+		}
 
-span.role-ADMIN {
-	color: red;
-}
+		span.role-ADMIN {
+			color: red;
+		}
 
-.account-status-disabled {
-	color: red;
-}
+		.account-status-disabled {
+			color: red;
+		}
 
-.page-item.active .page-link {
-	background-color: gray; /* 선택된 페이지 번호의 배경색 */
-	color: #fff; /* 선택된 페이지 번호의 글자색 */
-}
+		.page-item.active .page-link {
+			background-color: gray;
+			/* 선택된 페이지 번호의 배경색 */
+			color: #fff;
+			/* 선택된 페이지 번호의 글자색 */
+		}
 
-#myModal {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 30%;
-}
+		#myModal {
+			position: fixed;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 30%;
+		}
 
-.modal {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 50%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.5);
-}
+		.modal {
+			display: none;
+			position: fixed;
+			z-index: 1;
+			left: 0;
+			top: 0;
+			width: 50%;
+			overflow: auto;
+			background-color: rgba(0, 0, 0, 0.5);
+		}
 
-.modal-content {
-	background-color: #fefefe;
-	margin: 10px auto;
-	padding: 0px;
-	border: 1px solid #888;
-	width: 95%;
-	height: 90%;
-	position: relative;
-}
+		.modal-content {
+			background-color: #fefefe;
+			margin: 10px auto;
+			padding: 0px;
+			border: 1px solid #888;
+			width: 95%;
+			height: 90%;
+			position: relative;
+		}
 
-.close-modal {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	font-size: 20px;
-	font-weight: bold;
-	cursor: pointer;
-	color: #333;
-}
+		.close-modal {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			font-size: 20px;
+			font-weight: bold;
+			cursor: pointer;
+			color: #333;
+		}
 
-.close-modal:hover, .close-modal:focus {
-	color: #000;
-}
+		.close-modal:hover,
+		.close-modal:focus {
+			color: #000;
+		}
 
-.modal-header {
-	text-align: center;
-	margin-bottom: 20px;
-}
+		.modal-header {
+			text-align: center;
+			margin-bottom: 20px;
+		}
 
-.modal-body {
-	text-align: center;
-}
+		.modal-body {
+			text-align: center;
+		}
 
-.pagination {
-	display: flex;
-	justify-content: center;
-	list-style: none;
-	padding: 0;
-	margin-top: 20px;
-}
+		.pagination {
+			display: flex;
+			justify-content: center;
+			list-style: none;
+			padding: 0;
+			margin-top: 20px;
+		}
 
-.page-item {
-	margin: 0 5px;
-}
+		.page-item {
+			margin: 0 5px;
+		}
 
-.page-link {
-	display: inline-block;
-	padding: 5px 10px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	text-decoration: none;
-	color: #333;
-	background-color: #f2f2f2;
-}
+		.page-link {
+			display: inline-block;
+			padding: 5px 10px;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			text-decoration: none;
+			color: #333;
+			background-color: #f2f2f2;
+		}
 
-.page-link:hover {
-	background-color: #e0e0e0;
-}
+		.page-link:hover {
+			background-color: #e0e0e0;
+		}
 
-/* 모달 창 폼 css */
-#editForm {
-	margin-top: 20px;
-	text-align: center;
-}
+		/* 모달 창 폼 css */
+		#editForm {
+			margin-top: 20px;
+			text-align: center;
+		}
 
-#editForm div {
-	margin-bottom: 10px;
-}
+		#editForm div {
+			margin-bottom: 10px;
+		}
 
-#editForm label {
-	display: inline-block;
-	width: 120px;
-}
+		#editForm label {
+			display: inline-block;
+			width: 120px;
+		}
 
-#editNickname, #editZipcode, #editAddress1, #editAddress2 {
-	padding: 5px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	width: 200px;
-}
+		#editNickname,
+		#editZipcode,
+		#editAddress1,
+		#editAddress2 {
+			padding: 5px;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			width: 200px;
+		}
 
-#editForm button[type="submit"] {
-	margin: 10px auto;
-	display: block;
-	padding: 5px 10px;
-	background-color: rgb(255, 128, 128);
-	color: white;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
-}
-.content-container {
+		#editForm button[type="submit"] {
+			margin: 10px auto;
+			display: block;
+			padding: 5px 10px;
+			background-color: rgb(255, 128, 128);
+			color: white;
+			border: none;
+			border-radius: 3px;
+			cursor: pointer;
+		}
+
+		.content-container {
 			margin: 0 auto;
 			max-width: 800px;
 			padding-top: 60px;
@@ -244,25 +251,27 @@ span.role-ADMIN {
 		input[type="submit"] {
 			margin-top: 10px;
 		}
-
 	</style>
-</style>
+	</style>
 
 
 
 </head>
+
 <body>
-<html layout:decorate="~{khk/adminNavbar}">
-<div layout:fragment="adminNav" class="container my-3">
-	<div class="content-container" style="margin: 0 auto; max-width: 800px; padding-top: 60px; text-align: center;">
-		<h2>공지사항 수정</h2>
-		<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
-			<label for="title" style="margin: 10px 0;">공지사항 제목</label>
-			<input type="text" id="title" name="title" th:value="${notice.title}" required><br><br>
-			<label for="content">공지사항 내용</label><br>
-			<textarea id="content" name="content" rows="40" required th:text="${notice.content}" style="width: 800px;"></textarea><br><br>
-			<input type="submit" value="등록">
-		</form>
-	</div>
-	</body>
+	<html layout:decorate="~{khk/adminNavbar}">
+	<div layout:fragment="adminNav" class="container my-3">
+		<div class="content-container" style="margin: 0 auto; max-width: 800px; padding-top: 60px; text-align: center;">
+			<h2>공지사항 수정</h2>
+			<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
+				<label for="title" style="margin: 10px 0;">공지사항 제목</label>
+				<input type="text" id="title" name="title" th:value="${notice.title}" required><br><br>
+				<label for="content">공지사항 내용</label><br>
+				<textarea id="content" name="content" rows="40" required th:text="${notice.content}"
+					style="width: 800px;"></textarea><br><br>
+				<input type="submit" value="등록">
+			</form>
+		</div>
+</body>
+
 </html>
