--- a/src/main/resources/templates/khk/partnerListPage.html
+++ b/src/main/resources/templates/khk/partnerListPage.html
@@ -139,7 +139,7 @@ btn_search.addEventListener('click', function() {
 	document.getElementById('searchForm').submit();
 });
 
-
+//aaa
 function openPopup(imageUrl) {
 	window.open(imageUrl, "_blank", "width=800,height=800");
 }
